--- a/styles/main.scss
+++ b/styles/main.scss
@@ -217,7 +217,14 @@ footer .socialmedia img{
     padding-top: 10px;
     opacity: .5;
 }
-
+.logos {
+    background: url(/images/cactusLogoMockup1.jpg) no-repeat center center fixed;
+    background: url(/images/cactusLogoMockup.jpg) no-repeat center center fixed;
+    background: url(/images/ProviderFarmsLogo.jpg) no-repeat center center fixed;
+    background: url(/images/providerFarmsMockupTshirt.jpg) no-repeat center center fixed;
+    background: url(/images/pinnaclePestLogoMockup.jpg) no-repeat center center fixed;
+    background: url(/images/pinnacleLogoMockup2.jpg) no-repeat center center fixed;
+}
 
 
 /*Desktop Version*/
@@ -451,14 +458,7 @@ grid-row-start: 1;
       grid-row-start: 6;
      grid-column-end: span 2;
  
-    .full-image {
-        background: url(/images/cactusLogoMockup1.jpg) no-repeat center center fixed;
-        background: url(/images/cactusLogoMockup.jpg) no-repeat center center fixed;
-        background: url(/images/ProviderFarmsLogo.jpg) no-repeat center center fixed;
-        background: url(/images/providerFarmsMockupTshirt.jpg) no-repeat center center fixed;
-        background: url(/images/pinnaclePestLogoMockup.jpg) no-repeat center center fixed;
-        background: url(/images/pinnacleLogoMockup2.jpg) no-repeat center center fixed;
-    }
+    
 
 
 }
