--- a/styles/main.scss
+++ b/styles/main.scss
@@ -218,6 +218,7 @@ footer .socialmedia img{
     opacity: .5;
 }
 .logos {
+    width: 100%;
     background: url(/images/cactusLogoMockup1.jpg) no-repeat center center fixed;
     background: url(/images/cactusLogoMockup.jpg) no-repeat center center fixed;
     background: url(/images/ProviderFarmsLogo.jpg) no-repeat center center fixed;
