--- a/styles/main.scss
+++ b/styles/main.scss
@@ -217,16 +217,16 @@ footer .socialmedia img{
     padding-top: 10px;
     opacity: .5;
 }
-.logos {
-    width: 100%;
-    background: url(/images/cactusLogoMockup1.jpg) no-repeat center center fixed;
-    background: url(/images/cactusLogoMockup.jpg) no-repeat center center fixed;
-    background: url(/images/ProviderFarmsLogo.jpg) no-repeat center center fixed;
-    background: url(/images/providerFarmsMockupTshirt.jpg) no-repeat center center fixed;
-    background: url(/images/pinnaclePestLogoMockup.jpg) no-repeat center center fixed;
-    background: url(/images/pinnacleLogoMockup2.jpg) no-repeat center center fixed;
-    background-size: cover;
-}
+// .logos {
+//     width: 100%;
+//     background: url(/images/cactusLogoMockup1.jpg) no-repeat center center fixed;
+//     background: url(/images/cactusLogoMockup.jpg) no-repeat center center fixed;
+//     background: url(/images/ProviderFarmsLogo.jpg) no-repeat center center fixed;
+//     background: url(/images/providerFarmsMockupTshirt.jpg) no-repeat center center fixed;
+//     background: url(/images/pinnaclePestLogoMockup.jpg) no-repeat center center fixed;
+//     background: url(/images/pinnacleLogoMockup2.jpg) no-repeat center center fixed;
+//     background-size: cover;
+// }
 
 
 /*Desktop Version*/
