--- a/styles/main.scss
+++ b/styles/main.scss
@@ -417,7 +417,7 @@ footer .socialmedia img{
     font-weight: 900;
 }
 .home-grid a img{
-
+    height: 100%;
     width: 100%;
     display: block;
     object-fit: cover;
