--- a/styles/main.css
+++ b/styles/main.css
@@ -304,6 +304,7 @@ footer .socialmedia img {
   }
   .resume .logos {
     margin: 0;
+    font-size: 0;
     display: -ms-grid;
     display: grid;
     -ms-grid-columns: 1fr;
