--- a/styles/main.scss
+++ b/styles/main.scss
@@ -388,6 +388,7 @@ footer .socialmedia img{
 
 .logos {
     margin: 0;
+    font-size: 0;
     display: grid;
     grid-template-columns: 1fr;
     
