--- a/styles/main.css
+++ b/styles/main.css
@@ -305,6 +305,7 @@ footer .socialmedia img {
   .resume .logos {
     margin: 0;
     font-size: 0;
+    line-height: 0;
     display: -ms-grid;
     display: grid;
     -ms-grid-columns: 1fr;
