--- a/styles/main.scss
+++ b/styles/main.scss
@@ -389,6 +389,7 @@ footer .socialmedia img{
 .logos {
     margin: 0;
     font-size: 0;
+    line-height: 0;
     display: grid;
     grid-template-columns: 1fr;
     
