--- a/styles/main.scss
+++ b/styles/main.scss
@@ -355,6 +355,7 @@ footer .socialmedia img{
 
     .portfoliogrid {
         display: grid;
+        float: left;
         grid-template-columns: auto auto auto;
         grid-template-rows: auto auto auto;
         grid-column-gap: 25px;
