--- a/styles/main.css
+++ b/styles/main.css
@@ -278,7 +278,6 @@ footer .socialmedia img {
   .portfoliogrid {
     display: -ms-grid;
     display: grid;
-    float: left;
     -ms-grid-columns: auto auto auto;
         grid-template-columns: auto auto auto;
     -ms-grid-rows: auto auto auto;
@@ -312,8 +311,10 @@ footer .socialmedia img {
         grid-template-columns: 1fr;
   }
   .resume .logos img {
+    float: left;
     display: block;
     width: 100%;
+    height: 100%;
   }
   .home-grid {
     margin: 17em 0 0 0;
