--- a/styles/main.scss
+++ b/styles/main.scss
@@ -355,7 +355,6 @@ footer .socialmedia img{
 
     .portfoliogrid {
         display: grid;
-        float: left;
         grid-template-columns: auto auto auto;
         grid-template-rows: auto auto auto;
         grid-column-gap: 25px;
@@ -390,14 +389,17 @@ footer .socialmedia img{
 .logos {
     margin: 0;
     line-height: 0;
+
     display: grid;
     grid-template-columns: 1fr;
     
 }
 
 .logos img {
+    float: left;
     display: block;
     width: 100%;
+    height: 100%;
 }
 
 }
