hopefully this helps

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -389,17 +389,16 @@ footer .socialmedia img{
 .logos {
     margin: 0;
     line-height: 0;
-
     display: grid;
     grid-template-columns: 1fr;
     
 }
 
 .logos img {
-    float: left;
-    display: block;
-    width: 100%;
     height: 100%;
+    width: 100%;
+    display: block;
+    object-fit: cover;
 }
 
 }
