--- a/styles/main.css
+++ b/styles/main.css
@@ -311,10 +311,11 @@ footer .socialmedia img {
         grid-template-columns: 1fr;
   }
   .resume .logos img {
-    float: left;
-    display: block;
-    width: 100%;
     height: 100%;
+    width: 100%;
+    display: block;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
   .home-grid {
     margin: 17em 0 0 0;
