--- a/styles/main.css
+++ b/styles/main.css
@@ -310,6 +310,12 @@ footer .socialmedia img {
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
   }
+  .resume .logos div {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+  }
   .resume .logos img {
     height: 100%;
     width: 100%;
