--- a/styles/main.css
+++ b/styles/main.css
@@ -216,7 +216,7 @@ footer .socialmedia img {
     padding-bottom: 0px;
     text-transform: uppercase;
   }
-  nav ul {
+  nav ul a {
     text-transform: uppercase;
     font-size: 130%;
     display: -webkit-box;
