--- a/styles/main.scss
+++ b/styles/main.scss
@@ -282,9 +282,8 @@ footer .socialmedia img{
 
 
 
-    nav ul{
+    nav ul a{
         text-transform: uppercase;
-        
         font-size: 130%;
         display: flex;
         flex-direction: row;
