--- a/styles/main.css
+++ b/styles/main.css
@@ -216,7 +216,7 @@ footer .socialmedia img {
     padding-bottom: 0px;
     text-transform: uppercase;
   }
-  nav ul a {
+  nav ul {
     text-transform: uppercase;
     font-size: 130%;
     display: -webkit-box;
@@ -227,6 +227,15 @@ footer .socialmedia img {
         -ms-flex-direction: row;
             flex-direction: row;
     word-spacing: 20pt;
+  }
+  nav ul li {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
   }
   h2 {
     font-size: 300%;
