--- a/styles/main.scss
+++ b/styles/main.scss
@@ -282,7 +282,7 @@ footer .socialmedia img{
 
 
 
-    nav ul a{
+    nav ul{
         text-transform: uppercase;
         font-size: 130%;
         display: flex;
@@ -290,6 +290,11 @@ footer .socialmedia img{
         word-spacing: 20pt;
     
 
+    }
+
+    nav ul li {
+        display: flex;
+        flex-direction: row;
     }
 
 
