--- a/styles/main.scss
+++ b/styles/main.scss
@@ -398,9 +398,10 @@ footer .socialmedia img{
     
 }
 
-.logos div{
+div.logos div{
     display: grid;
     grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
 }
 
 .logos img {
