--- a/styles/main.css
+++ b/styles/main.css
@@ -319,13 +319,10 @@ footer .socialmedia img {
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
   }
-  .resume div.logos > div {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: 1fr 1fr;
-        grid-template-columns: 1fr 1fr;
-    -ms-grid-rows: 1fr;
-        grid-template-rows: 1fr;
+  .resume .logos div {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
   }
   .resume .logos img {
     height: 100%;
