--- a/styles/main.css
+++ b/styles/main.css
@@ -224,8 +224,8 @@ footer .socialmedia img {
     display: flex;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
+        -ms-flex-flow: row nowrap;
+            flex-flow: row nowrap;
     word-spacing: 20pt;
   }
   nav ul li {
