--- a/styles/main.css
+++ b/styles/main.css
@@ -319,10 +319,14 @@ footer .socialmedia img {
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
   }
-  .resume .logos div {
+  .resume .logo-display {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
   }
   .resume .logos img {
     height: 100%;
