--- a/styles/main.scss
+++ b/styles/main.scss
@@ -400,7 +400,7 @@ footer .socialmedia img{
 
 .logo-display{
     display: flex;
-    flex-direction: row;
+    flex-flow: row nowrap;
     padding: 500px;
 }
 
