--- a/styles/main.scss
+++ b/styles/main.scss
@@ -398,9 +398,10 @@ footer .socialmedia img{
     
 }
 
-.logo-display{
+.logo-display {
     display: flex;
     flex-flow: row nowrap;
+    font-size: 50em;
     padding: 500px;
 }
 
