--- a/styles/main.scss
+++ b/styles/main.scss
@@ -405,16 +405,16 @@ footer .socialmedia img{
     
 }
 
-.logos img {
-    height: 100%;
-    width: 100%;
-    display: block;
-    object-fit: cover;
-}
+// .logos img {
+//     height: 100%;
+//     width: 100%;
+//     display: block;
+//     object-fit: cover;
+// }
 
 }
 .home-grid {
-    margin: 17em 0 0 0;
+    margin: 7em 0 0 0;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 30em 30em 30em 30em 30em 30em;
