--- a/styles/main.css
+++ b/styles/main.css
@@ -319,7 +319,7 @@ footer .socialmedia img {
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
   }
-  .resume .logos div {
+  .resume #debug {
     display: -ms-grid;
     display: grid;
     -ms-grid-columns: 1fr 1fr;
