--- a/styles/main.scss
+++ b/styles/main.scss
@@ -398,7 +398,7 @@ footer .socialmedia img{
     
 }
 
-#debug {
+.logo-display {
     display: grid;
     grid-template-columns: 1fr 1fr;
     padding-left: 1em;
