--- a/styles/main.css
+++ b/styles/main.css
@@ -311,7 +311,7 @@ footer .socialmedia img {
     line-height: 1.8em;
     font-size: 16pt;
   }
-  .resume .logos {
+  .logos {
     margin: 0;
     line-height: 0;
     display: -ms-grid;
@@ -319,11 +319,11 @@ footer .socialmedia img {
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
   }
-  .resume .logo-display {
+  .logo-display {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: 1fr 1fr;
-        grid-template-columns: 1fr 1fr;
+    -ms-grid-columns: auto auto;
+        grid-template-columns: auto auto;
     padding-left: 1em;
   }
   .home-grid {
