--- a/styles/main.scss
+++ b/styles/main.scss
@@ -401,7 +401,7 @@ footer .socialmedia img{
 .logo-display {
     display: grid;
     grid-template-columns: auto auto;
-    padding-left: 1em;
+    padding-right: 1em;
     
 }
 
