--- a/styles/main.scss
+++ b/styles/main.scss
@@ -401,7 +401,7 @@ footer .socialmedia img{
 .logo-display {
     display: grid;
     grid-template-columns: auto auto;
-    padding-right: 5em;
+    padding-right: 5em 5em 0 0;
     
 }
 
