--- a/styles/main.css
+++ b/styles/main.css
@@ -322,8 +322,8 @@ footer .socialmedia img {
   .logo-display {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: auto auto;
-        grid-template-columns: auto auto;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
     padding-right: 2em 2em 0 0;
   }
   .home-grid {
