--- a/styles/main.scss
+++ b/styles/main.scss
@@ -400,7 +400,7 @@ footer .socialmedia img{
 
 .logo-display {
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: 1fr 1fr;
     padding-right: 2em 2em 0 0;
     
 }
