--- a/styles/main.css
+++ b/styles/main.css
@@ -324,7 +324,7 @@ footer .socialmedia img {
     display: grid;
     -ms-grid-columns: 1fr 1fr;
         grid-template-columns: 1fr 1fr;
-    padding-right: 2em 2em 0em 0em;
+    padding-right: 2em;
   }
   .home-grid {
     margin: 7em 0 0 0;
