--- a/styles/main.css
+++ b/styles/main.css
@@ -326,6 +326,9 @@ footer .socialmedia img {
         grid-template-columns: 1fr 1fr;
     padding: 2em 2em 0 0;
   }
+  .logo-display h2 {
+    line-height: 15pt;
+  }
   .home-grid {
     margin: 7em 0 0 0;
     display: -ms-grid;
