--- a/styles/main.scss
+++ b/styles/main.scss
@@ -402,6 +402,9 @@ footer .socialmedia img{
     display: grid;
     grid-template-columns: 1fr 1fr;
     padding: 2em 2em 0 0;
+    h2{
+        line-height: 15pt;
+    }
     
 }
 
