--- a/styles/main.css
+++ b/styles/main.css
@@ -324,6 +324,8 @@ footer .socialmedia img {
     display: grid;
     -ms-grid-columns: 1fr 1fr;
         grid-template-columns: 1fr 1fr;
+  }
+  .logo-display div {
     padding: 4em 4em 0 0;
   }
   .logo-display h2 {
