--- a/styles/main.scss
+++ b/styles/main.scss
@@ -401,7 +401,9 @@ footer .socialmedia img{
 .logo-display {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    padding: 4em 4em 0 0;
+    div{
+        padding: 4em 4em 0 0;
+    }
     h2{
         line-height: 15pt;
     }
