--- a/styles/main.css
+++ b/styles/main.css
@@ -183,8 +183,9 @@ p {
 }
 
 footer {
-  height: 110px;
+  height: 130px;
   width: 100%;
+  padding-top: 20px;
   text-align: center;
   background-color: white;
   color: #fd802d;
