--- a/styles/main.scss
+++ b/styles/main.scss
@@ -204,8 +204,9 @@ p {
 
 
 footer{
-    height: 110px;
+    height: 130px;
     width: 100%;
+    padding-top: 20px;
     text-align: center;
     background-color: $body-background-color;
     color: $color1;
