--- a/styles/main.scss
+++ b/styles/main.scss
@@ -283,7 +283,7 @@ footer .socialmedia img{
 
 
 
-    nav ul{
+    ul{
         text-transform: uppercase;
         font-size: 130%;
         display: flex;
@@ -293,10 +293,10 @@ footer .socialmedia img{
 
     }
 
-    nav ul li {
-        display: flex;
-        flex-direction: row;
-    }
+    // ul{
+    //     display: flex;
+    //     flex-direction: row;
+    // }
 
 
     h2 {
