--- a/styles/main.css
+++ b/styles/main.css
@@ -217,7 +217,7 @@ footer .socialmedia img {
     padding-bottom: 0px;
     text-transform: uppercase;
   }
-  nav ul {
+  ul {
     text-transform: uppercase;
     font-size: 130%;
     display: -webkit-box;
@@ -228,15 +228,6 @@ footer .socialmedia img {
         -ms-flex-flow: row nowrap;
             flex-flow: row nowrap;
     word-spacing: 20pt;
-  }
-  nav ul li {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
   }
   h2 {
     font-size: 300%;
