--- a/styles/main.css
+++ b/styles/main.css
@@ -303,7 +303,7 @@ footer .socialmedia img {
     line-height: 1.8em;
     font-size: 16pt;
   }
-  .logos {
+  .display {
     margin: 0;
     display: -ms-grid;
     display: grid;
