--- a/styles/main.scss
+++ b/styles/main.scss
@@ -391,7 +391,7 @@ footer .socialmedia img{
         font-size: 16pt;
     }
 }
-.logos {
+.display {
     margin: 0;
     display: grid;
     grid-template-columns: 1fr;
