--- a/styles/main.css
+++ b/styles/main.css
@@ -413,4 +413,12 @@ footer .socialmedia img {
   -ms-grid-column-span: 2;
       grid-column-end: span 2;
 }
+
+.four-column {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 1em;
+}
 /*# sourceMappingURL=main.css.map */
