--- a/styles/main.scss
+++ b/styles/main.scss
@@ -487,7 +487,13 @@ grid-row-start: 1;
      grid-column-end: span 2;
     }
 
- 
+    .four-column {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-gap: 1em;
+    }
+
+
     
     
 
