--- a/styles/main.css
+++ b/styles/main.css
@@ -307,6 +307,9 @@ footer .socialmedia img {
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
   }
+  .display h2, .display p {
+    padding: 8em;
+  }
   .logo-display {
     display: -ms-grid;
     display: grid;
@@ -314,7 +317,7 @@ footer .socialmedia img {
         grid-template-columns: 1fr 1fr;
   }
   .logo-display div {
-    padding: 2em 4em 0 0;
+    padding: 2em 4em 2em 2em;
   }
   .home-grid {
     margin: 7em 0 0 0;
