--- a/styles/main.scss
+++ b/styles/main.scss
@@ -391,6 +391,9 @@ footer .socialmedia img{
     margin: 0;
     display: grid;
     grid-template-columns: 1fr;
+    h2, p {
+        padding: 8em;
+    }
     
 }
 
@@ -398,7 +401,7 @@ footer .socialmedia img{
     display: grid;
     grid-template-columns: 1fr 1fr;
     div{
-        padding: 2em 4em 0 0;
+        padding: 2em 4em 2em 2em;
     }
 
     
