--- a/styles/main.scss
+++ b/styles/main.scss
@@ -391,7 +391,10 @@ footer .socialmedia img{
     margin: 0;
     display: grid;
     grid-template-columns: 1fr;
-    h2, p {
+    h2 {
+        padding: 4em 8em 0;
+    }
+    p {
         padding: 8em;
     }
     
