--- a/styles/main.scss
+++ b/styles/main.scss
@@ -395,7 +395,7 @@ footer .socialmedia img{
         padding: 4em 8em 0;
     }
     p {
-        padding: 8em;
+        padding: 0 10em 6em;
     }
     
 }
