--- a/styles/main.css
+++ b/styles/main.css
@@ -311,7 +311,7 @@ footer .socialmedia img {
     padding: 4em 8em 0;
   }
   .display p {
-    padding: 8em;
+    padding: 0 10em 6em;
   }
   .logo-display {
     display: -ms-grid;
