--- a/styles/main.scss
+++ b/styles/main.scss
@@ -392,10 +392,10 @@ footer .socialmedia img{
     display: grid;
     grid-template-columns: 1fr;
     h2 {
-        padding: 4em 8em 0;
+        padding: 2em 240px 0;
     }
     p {
-        padding: 0 10em 6em;
+        padding: 0 240px 4em;
     }
     
 }
