--- a/styles/main.css
+++ b/styles/main.css
@@ -308,10 +308,10 @@ footer .socialmedia img {
         grid-template-columns: 1fr;
   }
   .display h2 {
-    padding: 4em 8em 0;
+    padding: 2em 240px 0;
   }
   .display p {
-    padding: 0 10em 6em;
+    padding: 0 240px 4em;
   }
   .logo-display {
     display: -ms-grid;
