--- a/styles/main.scss
+++ b/styles/main.scss
@@ -406,9 +406,13 @@ footer .socialmedia img{
     div{
         padding: 2em 4em 2em 2em;
     }
+    p{
+        padding: 0;
+    }
 
     
 }
+
 
 // .logos img {
 //     height: 100%;
