--- a/styles/main.css
+++ b/styles/main.css
@@ -322,6 +322,9 @@ footer .socialmedia img {
   .logo-display div {
     padding: 2em 4em 2em 2em;
   }
+  .logo-display p {
+    padding: 0;
+  }
   .home-grid {
     margin: 7em 0 0 0;
     display: -ms-grid;
