--- a/styles/main.scss
+++ b/styles/main.scss
@@ -499,6 +499,7 @@ grid-row-start: 1;
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr;
         grid-gap: 1em;
+        height: 15em;
     }
 
 
