--- a/styles/main.css
+++ b/styles/main.css
@@ -428,4 +428,8 @@ footer .socialmedia img {
   grid-gap: 1em;
   height: 15em;
 }
+
+.acai {
+  margin: auto auto;
+}
 /*# sourceMappingURL=main.css.map */
