--- a/styles/main.scss
+++ b/styles/main.scss
@@ -391,12 +391,12 @@ footer .socialmedia img{
     margin: 0;
     display: grid;
     grid-template-columns: 1fr;
-    h2 {
-        padding: 2em 240px 0;
-    }
-    p {
-        padding: 0 240px 4em;
-    }
+    // h2 {
+    //     padding: 2em 240px 0;
+    // }
+    // p {
+    //     padding: 0 240px 4em;
+    // }
     
 }
 
