--- a/styles/main.scss
+++ b/styles/main.scss
@@ -408,10 +408,13 @@ footer .socialmedia img{
     }
 
 .logo-display-padding {
-    padding: 0;
     margin: 0;
     display: grid;
     grid-template-columns: 1fr;
+    h2, p {
+        padding: 0;
+    }
+
 }
     
 
