--- a/styles/main.scss
+++ b/styles/main.scss
@@ -67,12 +67,12 @@ header a{
     
 
 }
-header{
-    margin-top: 2%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
+// header{
+//     margin-top: 2%;
+//     display: flex;
+//     flex-direction: row;
+//     align-items: center;
+// }
 
 h1 {
     font-size: 5em;
