--- a/styles/main.css
+++ b/styles/main.css
@@ -252,11 +252,10 @@ footer .socialmedia img {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
   }
-  .bio p {
+  .bio p, h3 {
     padding-left: 5%;
   }
   .portfoliogrid {
