--- a/styles/main.scss
+++ b/styles/main.scss
@@ -334,6 +334,10 @@ footer .socialmedia img{
         margin-left: 15%;
         margin-right: 15%;
     }
+    
+    .music {
+        background-color: rgb(66, 117, 178);
+    }
 
     .mypic{
         width: 40%;
