--- a/styles/main.scss
+++ b/styles/main.scss
@@ -337,6 +337,7 @@ footer .socialmedia img{
     
     .music {
         background-color: rgb(66, 117, 178);
+        padding: 10px;
     }
 
     .mypic{
