--- a/styles/main.scss
+++ b/styles/main.scss
@@ -336,8 +336,8 @@ footer .socialmedia img{
     }
     
     .music {
-        background-color: rgb(66, 117, 178);
-        padding: 10px;
+        background-color: rgb(16, 106, 180);
+        padding: 30px 10px;
     }
 
     .mypic{
