--- a/styles/main.css
+++ b/styles/main.css
@@ -240,8 +240,8 @@ footer .socialmedia img {
     margin-right: 15%;
   }
   .music {
-    background-color: #4275b2;
-    padding: 10px;
+    background-color: #106ab4;
+    padding: 30px 10px;
   }
   .mypic {
     width: 40%;
