--- a/styles/main.css
+++ b/styles/main.css
@@ -399,7 +399,7 @@ footer .socialmedia img {
       grid-row-start: 4;
   -ms-grid-column-span: 2;
       grid-column-end: span 2;
-  top: 5em;
+  height: default;
 }
 
 .home-grid a:nth-of-type(9) {
