--- a/styles/main.scss
+++ b/styles/main.scss
@@ -497,7 +497,7 @@ grid-row-start: 1;
       grid-column-start: 2;
      grid-row-start: 4;
     grid-column-end: span 2;
-    top: 5em;
+    height: default;
 
             }
 
