--- a/styles/main.css
+++ b/styles/main.css
@@ -184,6 +184,26 @@ footer .socialmedia img {
   opacity: .5;
 }
 
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: red;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+}
+
+#myBtn:hover {
+  background-color: #555;
+}
+
 /*Desktop Version*/
 @media only screen and (min-width: 1340px) {
   header {
