--- a/styles/main.scss
+++ b/styles/main.scss
@@ -218,6 +218,26 @@ footer .socialmedia img{
     padding-top: 10px;
     opacity: .5;
 }
+
+#myBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: red;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 4px;
+  }
+  
+  #myBtn:hover {
+    background-color: #555;
+  }
 // .logos {
 //     width: 100%;
 //     background: url(/images/cactusLogoMockup1.jpg) no-repeat center center fixed;
