--- a/styles/main.css
+++ b/styles/main.css
@@ -419,7 +419,7 @@ footer .socialmedia img {
       grid-row-start: 4;
   -ms-grid-column-span: 2;
       grid-column-end: span 2;
-  height: auto;
+  height: 150%;
 }
 
 .home-grid a:nth-of-type(9) {
