--- a/styles/main.scss
+++ b/styles/main.scss
@@ -517,7 +517,7 @@ grid-row-start: 1;
       grid-column-start: 2;
      grid-row-start: 4;
     grid-column-end: span 2;
-    height: auto;
+    height: 150%;
 
             }
 
