--- a/styles/main.css
+++ b/styles/main.css
@@ -190,10 +190,11 @@ footer .socialmedia img {
   bottom: 20px;
   right: 30px;
   z-index: 99;
-  font-size: 18px;
+  font-size: 15px;
+  text-transform: uppercase;
   border: none;
   outline: none;
-  background-color: red;
+  background-color: #fd802d;
   color: white;
   cursor: pointer;
   padding: 15px;
@@ -201,7 +202,7 @@ footer .socialmedia img {
 }
 
 #myBtn:hover {
-  background-color: #555;
+  background-color: #faa680;
 }
 
 /*Desktop Version*/
