--- a/styles/main.scss
+++ b/styles/main.scss
@@ -225,10 +225,11 @@ footer .socialmedia img{
     bottom: 20px;
     right: 30px;
     z-index: 99;
-    font-size: 18px;
+    font-size: 15px;
+    text-transform: uppercase;
     border: none;
     outline: none;
-    background-color: red;
+    background-color: $color1;
     color: white;
     cursor: pointer;
     padding: 15px;
@@ -236,7 +237,7 @@ footer .socialmedia img{
   }
   
   #myBtn:hover {
-    background-color: #555;
+    background-color: $color2;
   }
 // .logos {
 //     width: 100%;
