--- a/styles/main.scss
+++ b/styles/main.scss
@@ -512,6 +512,7 @@ grid-row-start: 1;
         grid-column-start: 1;
         grid-row-start: 3;
         grid-column-end: span 2;
+        height: 150%;
 
         }
    .home-grid a:nth-of-type(8) {
