--- a/styles/main.css
+++ b/styles/main.css
@@ -98,6 +98,9 @@ nav {
 
 nav a {
   text-decoration: none;
+}
+
+nav li {
   list-style: none;
 }
 
@@ -402,7 +405,6 @@ footer .socialmedia img {
       grid-row-start: 2;
   -ms-grid-row-span: 2;
       grid-row-end: span 2;
-  height: 150%;
 }
 
 .home-grid a:nth-of-type(6) {
@@ -421,7 +423,6 @@ footer .socialmedia img {
       grid-row-start: 4;
   -ms-grid-column-span: 2;
       grid-column-end: span 2;
-  height: 150%;
 }
 
 .home-grid a:nth-of-type(9) {
