--- a/styles/main.scss
+++ b/styles/main.scss
@@ -116,11 +116,14 @@ nav {
     & a{  
     text-decoration: none;
     }
-    & li{
-    list-style: none;
-    }
+     
 
 }
+
+li{
+    list-style: none;
+    }
+    
 nav ul {
     font-size: 1.5em;
     padding: .5em;
@@ -190,7 +193,7 @@ nav a:hover{
 
 
 .active{
-    color: $color3;
+    color: black;
 }
 
 p {
