--- a/styles/main.css
+++ b/styles/main.css
@@ -100,7 +100,7 @@ nav a {
   text-decoration: none;
 }
 
-nav li {
+li {
   list-style: none;
 }
 
@@ -157,7 +157,7 @@ nav a:hover {
 }
 
 .active {
-  color: #504d4d;
+  color: black;
 }
 
 p {
