--- a/styles/main.scss
+++ b/styles/main.scss
@@ -314,6 +314,7 @@ footer .socialmedia img{
         font-size: 130%;
         display: flex;
         flex-flow: row nowrap;
+        word-break: break-all;
         word-spacing: 20pt;
     
 
