--- a/styles/main.scss
+++ b/styles/main.scss
@@ -260,9 +260,9 @@ footer .socialmedia img{
 
 @media only screen and (min-width: 1340px) {
 
-    header{
-        justify-content: space-between;
-    }
+    // header{
+    //     justify-content: space-between;
+    // }
 
     // nav ul{
     //     display: flex;
