--- a/styles/main.css
+++ b/styles/main.css
@@ -225,14 +225,7 @@ footer .socialmedia img {
   .menu-icon ul {
     text-transform: uppercase;
     font-size: 130%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-flow: row nowrap;
-            flex-flow: row nowrap;
-    word-break: break-all;
+    display: inline-block;
     word-spacing: 20pt;
   }
   h2 {
