--- a/styles/main.scss
+++ b/styles/main.scss
@@ -312,9 +312,7 @@ footer .socialmedia img{
     .menu-icon ul{
         text-transform: uppercase;
         font-size: 130%;
-        display: flex;
-        flex-flow: row nowrap;
-        word-break: break-all;
+        display: inline-block;
         word-spacing: 20pt;
     
 
