--- a/styles/main.scss
+++ b/styles/main.scss
@@ -313,7 +313,7 @@ footer .socialmedia img{
     .menu-icon ul{
         text-transform: uppercase;
         font-size: 130%;
-        display: inline-block;
+        display: flex;
         word-spacing: 20pt;
     
 
