--- a/styles/main.css
+++ b/styles/main.css
@@ -231,6 +231,9 @@ footer .socialmedia img {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
     word-spacing: 20pt;
   }
   h2 {
