--- a/styles/main.scss
+++ b/styles/main.scss
@@ -314,6 +314,7 @@ footer .socialmedia img{
         text-transform: uppercase;
         font-size: 130%;
         display: flex;
+        justify-content: space-evenly;
         word-spacing: 20pt;
     
 
