--- a/styles/main.scss
+++ b/styles/main.scss
@@ -106,6 +106,11 @@ h4 {
     margin-bottom: 2em;
 }
 
+header {
+     display: flex;
+     justify-content: space-between;
+     align-items: center;
+}
 
 nav {
     text-align: right;
