--- a/styles/main.css
+++ b/styles/main.css
@@ -229,7 +229,7 @@ footer .socialmedia img {
   .menu-icon ul {
     text-transform: uppercase;
     font-size: 130%;
-    display: contents;
+    display: inline;
   }
   h2 {
     font-size: 300%;
