--- a/styles/main.scss
+++ b/styles/main.scss
@@ -314,7 +314,7 @@ footer .socialmedia img{
     .menu-icon ul{
         text-transform: uppercase;
         font-size: 130%;
-       display: contents;
+       display: inline;
     
 
     }
